--- a/Documentazione progetto/Capitoli/cpp.tex
+++ b/Documentazione progetto/Capitoli/cpp.tex
@@ -159,48 +159,62 @@ Un metodo più potente per il riutilizzo del codice è fornito dai templates.
 Essi costituiscono uno “schema” di classe che poi verrà realizzato concretamente sostituendo ai tipi parametrici i tipi effettivi dichiarati dagli utilizzatori.
 
 A differenza del linguaggio Java, ogni differente realizzazione del template costituisce un tipo
-a sé stante e senza alcuna relazione con gli altri: in Java si può avere una gerarchia di tipi
-derivati dallo stesso template.
+a sé stante e senza alcuna relazione con gli altri: in Java si può invece avere una gerarchia di tipi derivati dallo stesso template (che non è da confondere con questa casistica: "Dati due tipi concreti A e B per esempio MyClass<A> non ha alcuna relazione con MyClass<B>, a prescindere dal fatto che A e B siano correlate.
+Il genitore comune di MyClass<A> e MyClass<B> è Object"; ci si riferisce al fatto che si può utilizzare l'invocazione generica anche con i sottotipi, ma tra ogni generic non c'è legame di gerarchia).
+
 
 In C++ invece ogni realizzazione di un template viene concretizzata tramite codice
 indipendente, portando quindi ad un file eseguibile di dimensioni maggiori. Inoltre, per fornire
 vincoli in modo esplicito come in Java, si deve ricorrere a una “pseudo-ereditarietà”.
 
-Questa flessibilità offerta dai templates, è stata utilizzata nella stesura della classe \textit{Matrix}.
+Questa flessibilità offerta dai templates, è stata utilizzata nella stesura della classe \textit{Matrix}: nell'applicazione abbiamo implementato matrici di interi (come si vede in figura ~\ref{fig:templates}), per poter così supportare operazioni numeriche tra di loro.
+
+Nulla vieta ovviamente anche di poter creare matrici di stringhe: questo però richiederebbe un adattamento della libreria (per consentire somma e sottrazioni, qualora definibili, tra stringhe).
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.8\textwidth]{Immagini/ConcreteteTemplates.png}
+	\caption{Utilizzo concreto dei templetas}
+	\label{fig:templates}
+\end{figure}
 
 \section{Standard Template Library}
 La libreria STL del C++ mette a disposizione una serie di contenitori parametrici, che quindi
-possono contenere oggetti di tipo arbitrario. Fornisce inoltre iteratori che permettono di visitare
-tali contenitori e algoritmi per manipolarne gli elementi.
+possono contenere oggetti di tipo arbitrario: fornisce inoltre iteratori che permettono di visitare tali contenitori e algoritmi per manipolarne gli elementi.
 
-Uno dei contenitori più semplici è \textit{vector}, una classe che permette di gestire collezioni di oggetti ordinati come un array.
+Uno dei contenitori più semplici è \textbf{vector}, una classe che permette di gestire collezioni di oggetti ordinati come un array.
 
-I vantaggi del vector sul semplice array sono diversi, tra cui la gestione automatica della
-memoria e la presenza di diversi metodi per le operazioni più comuni quali l'inserimento di un
-nuovo valore.
+I vantaggi del vector sul semplice array sono diversi, tra cui 
+\begin{itemize}
+	\item Gestione automatica della memoria;
+	\item Presenza di diversi metodi per le operazioni più comuni quali l'inserimento di nuovi valori.
+\end{itemize}
 
 La classe Matrix utilizza un vector per memorizzare gli elementi della matrice ed essendo
-parametrica di parametro T, utilizza un \textit{vector<vector<T>>}.
+parametrica di parametro T, utilizza un \textbf{vector< vector<T> >}.
+
 \subsection{STL - Iterator}
-Tra le altre funzionalità messe a disposizione da vector e dagli altri contenitori in STL ci sono gli
-iteratori, che costituiscono il modo standard di accedere agli elementi nel contenitore stesso. Gli
-iteratori si comportano in modo simile a semplici puntatori (ad esempio ammettono l'operatore ++),
-anche se in realtà sono più flessibili e possono essere utilizzati anche con le liste.
+Tra le altre funzionalità messe a disposizione da vector e dagli altri contenitori in STL ci sono gli iteratori, che costituiscono il modo standard di accedere agli elementi nel contenitore stesso. 
+
+Gli iteratori si comportano in modo simile a semplici puntatori (ad esempio ammettono l'operatore \textit{++}), anche se in realtà sono più flessibili e possono essere utilizzati anche con le liste: come si vede in figura ~\ref{fig:Iterator}, nella nostra applicazione, abbiamo utilizzato \textbf{iterator} per andare a deallocare la memoria occupata dai valori che compongono la matrice.
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.7\textwidth]{Immagini/Stl_Iterator.png}
+	\includegraphics[width=0.9\textwidth]{Immagini/Stl_Iterator.png}
 	\caption{STL - Iterator}
 	\label{fig:Iterator}
 \end{figure}
 
 \subsection{STL - Algorithm}
-La libreria STL mette a disposizione anche degli algoritmi generici e riutilizzabili per operare sui contenitori.
+La libreria STL mette a disposizione anche degli \textbf{algoritmi generici} e riutilizzabili per operare sui contenitori \textit{STL}.
 
-Tali algoritmi sono implementati tramite funzioni template che si possono includere nei propri file tramite la direttiva di include.
+Tali algoritmi sono implementati tramite funzioni template che possono essere inclusi nei propri file tramite la direttiva di \textit{include}.
 
-Un esempio di algoritmo è la funzione \textit{for-each()}, che applica una funzione parametro a tutti gli
-elementi di un contenitore.
+Esempi di algoritmi utilizzati nel codice sono le funzioni:
+\begin{itemize}
+	\item \textbf{for-each}, che applica una funzione parametro a tutti gli
+	elementi di un contenitore;
+	\item \textbf{max-element}, la quale cerca il massimo valore all'interno di una collezione (nel nostro caso itera da \textit{begin} fino a \textit{end}).
+\end{itemize}
 
 \begin{figure}[h]
 	\centering
